@@ -126,6 +126,8 @@ New in v0.8.00 (2016/07/??)
   - Fixed PEP8 errors: E402 module level import not at top of file
 * Fixed bug #1671852 - Code regression caused by revision 1108
   - change util.uexc() back to bare uexc()
+* Fixed bug #1668750 - Don't mask backend errors
+  - added exception prints to module import errors
 
 
 New in v0.7.08 (2016/07/02)
